Avançada teoria a Anàlisi. Estic intentant demostrar el Teorema de Cauchy (prod. de sèries absolutament convergents).

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -146,6 +146,8 @@
 
 \setcounter{MaxMatrixCols}{20}
 
+\newcommand{\corollari}{coro{\lgem}ari }
+
 \newcommand*{\titleTMB}{\begingroup% Three Men in a Boat
 	\vspace*{0.1\textheight}
 	\centering
