--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -464,7 +464,7 @@
 					\item Reflexiva: Tenim que l'aplicació \(\Id_{X}\) és bijectiva, oberta i contínua. Per la definició d'\myref{def:homeomorfisme entre topologies} tenim que \(\Id_{x}\) és un homeomorfisme, i per la definició d'\myref{def:espais topològics isomorfs} tenim que \(X\cong X\).
 					\item Simètrica: Siguin \(X\) amb la topologia \(\tau_{X}\) i \(Y\) amb la topologia \(\tau_{Y}\) dos espais topològics isomorfs. Per la definició d'\myref{def:espais topològics isomorfs} tenim que existeix un homeomorfisme \(f\colon X\longrightarrow Y\).
 					
-					Pel Teorema \myref{thm:bijectiva iff invertible} trobem que existeix l'aplicació inversa \(f^{-1}\) de \(Y\) a \(X\), i pel coro{\lgem}ari \myref{cor:l'inversa d'una aplicació invertible és invertible} tenim que l'aplicació \(f^{-1}\) és bijectiva.
+					Pel Teorema \myref{thm:bijectiva iff invertible} trobem que existeix l'aplicació inversa \(f^{-1}\) de \(Y\) a \(X\), i pel \corollari \myref{cor:l'inversa d'una aplicació invertible és invertible} tenim que l'aplicació \(f^{-1}\) és bijectiva.
 					
 					També trobem que \(f^{-1}\) és oberta, ja que per la definició d'\myref{def:homeomorfisme entre topologies} tenim que \(f\) és contínua, i per la definició d'\myref{def:aplicació oberta} i la definició d'\myref{def:aplicació contínua} trobem que \(f^{1}\) és oberta. De mateixa manera trobem que \(f^{-1}\) és contínua, ja que per la definició d'\myref{def:homeomorfisme entre topologies} tenim que \(f\) és oberta, i per la definició d'\myref{def:aplicació contínua} i la definició d'\myref{def:aplicació oberta} trobem que \(f^{-1}\) és contínua.
 					
