Ara tot és vectorial, incloent el logo. Mirar de fer que no es generi un arxiu extra al compilar la portada.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -255,14 +255,16 @@
 		
 		\tkzDrawPoints[shape=cross,color=black](E,M)
 		
-		\fontsize{24}{24}\selectfont
+		\fontsize{23.5}{23.5}\selectfont
 		\path [postaction={decorate,decoration={text along path, 
 		reverse path,text align=center,
 		text={|\sffamily\color{black}|Universitat Aut{ò}noma de Barcelona}}}] (-30:3cm+0.3em) arc (-30:210:3cm+0.3em);
-		\node[black,rotate=180-336.5-90] at (180-336.5:3cm+0.6em) {\includegraphics[height=1em]{imatges/UABlogo.png}};
-		\node[black,rotate=336.5-90] at (336.5:3cm+0.6em) {\includegraphics[height=1em]{imatges/UABlogo.png}};
+		\node[black,rotate=180-338.5-90] at (180-338.5:3cm+0.6em)
+		{\includegraphics[width=0.667em]{imatges/UABLogo.eps}};
+		\node[black,rotate=338.5-90] at (338.5:3cm+0.6em)%
+		{\includegraphics[width=0.667em]{imatges/UABLogo.eps}};
 		\path [postaction={decorate,decoration={text along path, text align=center,
-		text={|\color{black}|Grau en Matem{à}tiques }}}] (210:3cm+1em) arc (210:330:3cm+1em);
+		text={|\color{black}|Grau en Matem{à}tiques }}}] (210:3cm+0.9em) arc (210:330:3cm+0.9em);
 	\end{tikzpicture}}
 	\vfill
 	{\large\scshape Notes de classe}\\[\baselineskip]
